[package]
name = "tiny_http"
version = "0.12.0"
authors = ["pierre.krieger1708@gmail.com",
           "Corey Farwell <coreyf@rwell.org>"]
description = "Low level HTTP server library"
documentation = "https://tiny-http.github.io/tiny-http/tiny_http/index.html"
keywords = ["http", "server", "web"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tiny-http/tiny-http"
edition = "2018"
rust-version = "1.57"

[features]
default = ["log"]
ssl = ["ssl-openssl"]
ssl-openssl = ["openssl", "zeroize"]
ssl-rustls = ["rustls", "rustls-pemfile", "zeroize"]
ssl-native-tls = ["native-tls", "zeroize"]

[dependencies]
ascii = "1.0"
chunked_transfer = "1"
httpdate = "1.0.2"

log = { version = "0.4.4", optional = true }
openssl = { version = "0.10", optional = true }
rustls = { version = "0.20", optional = true }
rustls-pemfile = { version = "0.2.1", optional = true }
zeroize = { version = "1", optional = true }
native-tls = { version = "0.2", optional = true }

[dev-dependencies]
rustc-serialize = "0.3"
sha1 = "0.6.0"
fdlimit = "0.1"
libc = "0.2"

[package.metadata.docs.rs]
# Enable just one SSL implementation
features = ["ssl-openssl"]
