[package]
name = "tiny_http"
version = "0.12.0"
description = "Low level HTTP server library"
keywords = ["http", "server", "web"]
license = "MIT OR Apache-2.0"
edition = "2018"

[features]
default = ["log", "ssl-rustls", "memory_monitoring"]
ssl-rustls = ["rustls", "rustls-pemfile", "zeroize"]
memory_monitoring = ["sys-info"]

[dependencies]
ascii = "1.1.0"
chunked_transfer = "1.5.0"
httpdate = "1.0.3"
sysinfo = "0.30.5"
sys-info = { version = "0.9.1",optional = true }
log = { version = "0.4.20", optional = true }
rustls = { version = "0.21.10", features = ["dangerous_configuration"], optional = true }
rustls-pemfile = { version = "1.0.4", optional = true }
zeroize = { version = "1.7.0", optional = true }

[dev-dependencies]
rustc-serialize = "0.3.25"
sha1 = "0.6.0"
sysinfo = "0.30.5"
[package.metadata.docs.rs]
features = ["ssl-rustls"]
